<resources>
    <string name="app_name">Add Contacts Demo</string>

    <string name="reg_activity_name">Registration</string>
    <string name="login_activity_name">Login</string>

    <string name="btn_proceed">Proceed</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_set_submit">Submit</string>
    <string name="btn_set_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_showPopUp">Add</string>
    <string name="btn_showContacts">View</string>
    <string name="btn_instruction_ok">OK</string>
    <string name="btn_send_sms">Send</string>

    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_city">City</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_empty_new_password">Please enter new password</string>
    <string name="hint_empty_cnf_password">Please enter confirm password</string>
    <string name="hint_age">Age</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_type_message">Type your message</string>

    <string name="tv_instruction">All fields are compulsory</string>
    <string name="tv_set_password_header">Set Password</string>
    <string name="tv_confirmation">Thank You For \n\n Registration</string>
    <string name="tv_enter_details">Enter Details</string>
    <string name="tv_edit_details">Edit Details</string>
    <string name="tv_no_contacts">No Contacts Found</string>
    <string name="tv_splash_text">Add Contacts Demo</string>
    <string name="tv_instruction_delete">Swipe LEFT to delete a contact</string>
    <string name="tv_instruction_edit">Swipe RIGHT to edit a contact</string>
    <string name="tv_about_app">
        The main functionality is to add phone contacts.\n\nApart from adding the contacts, one can edit or delete those contacts.\n\nUser can also call, send an email or also can send sms to a particular contact from the app.
    </string>

    <string-array name="states">
        <item>Select states</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chattisgarh</item>
        <item>Goa</item>
        <item>Gujrat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerela</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odhisa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="gender">
        <item>Select gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>
