<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:background="@drawable/gradient_color_brown_shade"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_header_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_set_password_header"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorCustom_grey_300"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contains_newPassd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:hint="@string/hint_new_password"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/HintAppearance"
        android:textColorHint="@color/colorCustom_grey_400">
        <EditText
            android:id="@+id/ed_new_pssd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorCustom_grey_400"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contains_cnfPassd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:hint="@string/hint_confirm_password"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/HintAppearance"
        android:textColorHint="@color/colorCustom_grey_400">
        <EditText
            android:id="@+id/ed_cnf_pssd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorCustom_grey_400"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_set_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_set_submit"
            style="@null"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@drawable/custom_button_background_cyan"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/btn_set_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_set_cancel"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            style="@null"
            android:background="@drawable/custom_button_background_pink"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

</LinearLayout>