<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:background="@drawable/gradient_color_brown_shade"
    tools:context="demo.dada.com.addcontactsdemo.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/containsButtons"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_instruction"
            android:textStyle="italic"
            android:textColor="@color/colorCustom_grey_200"
            android:layout_marginBottom="20dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contains_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            android:hint="@string/hint_name"
            app:hintTextAppearance="@style/HintAppearance"
            android:textColorHint="@color/colorCustom_grey_400">
            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:backgroundTint="@color/colorCustom_grey_400"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contains_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            android:hint="@string/hint_phone"
            app:hintTextAppearance="@style/HintAppearance"
            android:textColorHint="@color/colorCustom_grey_400">
            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="10"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/colorCustom_grey_400"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contains_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            android:hint="@string/hint_email"
            app:hintTextAppearance="@style/HintAppearance"
            android:textColorHint="@color/colorCustom_grey_400">
            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/colorCustom_grey_400"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contains_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            android:hint="@string/hint_city"
            app:hintTextAppearance="@style/HintAppearance"
            android:textColorHint="@color/colorCustom_grey_400">
            <EditText
                android:id="@+id/editText_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textCapWords"
                android:backgroundTint="@color/colorCustom_grey_400"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@drawable/gradient_color_brown_shade"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/containsButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_proceed"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button_background_cyan"
            android:layout_weight="1"
            style="@null"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_clear"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button_background_pink"
            style="@null"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>
