<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/gradient_color_brown_shade"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_display_enter_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_enter_details"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>
    <View
        android:id="@+id/view_enter_details"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorCustom_semi_light_grey"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_display_enter_details"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_submit_details"
        android:layout_below="@+id/view_enter_details"
        android:fillViewport="true"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/contains_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/HintAppearance"
        android:textColorHint="@color/colorCustom_grey_400"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_firstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorCustom_grey_400"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contains_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/HintAppearance"
        android:textColorHint="@color/colorCustom_grey_400">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_lastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorCustom_grey_400"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gradient_color_brown_shade"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contains_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/spinner_gender"
            android:layout_toEndOf="@+id/spinner_gender"
            android:layout_alignBaseline="@+id/spinner_gender"
            android:hint="@string/hint_age"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintTextAppearance="@style/HintAppearance"
            android:textColorHint="@color/colorCustom_grey_400"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_age"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:maxLength="3"
                android:digits="0123456789"
                android:backgroundTint="@color/colorCustom_grey_400"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contains_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/HintAppearance"
        android:textColorHint="@color/colorCustom_grey_400">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorCustom_grey_400"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contains_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/HintAppearance"
        android:textColorHint="@color/colorCustom_grey_400">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:backgroundTint="@color/colorCustom_grey_400"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    </LinearLayout>
  </ScrollView>

    <Button
        android:id="@+id/btn_submit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_submit"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button_background_pink"/>
</RelativeLayout>